# graphia

./: .clang-format  .clang-tidy  .gitignore  .qmake.conf  .travis.yml  CMakeLists.txt  Doxyfile  GraphTool.pro  GraphTool.supp  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  utils.h
source/app/: CMakeLists.txt  app.pro  application.cpp  application.desktop.in  application.h  consolecapture.cpp  consolecapture.h  crashtype.h  headless.cpp  headless.h  imagery.qrc  limitconstants.cpp  limitconstants.h  main.cpp  odsconsolecapture.cpp  odsconsolecapture.h  preferences.cpp  preferences.h  preferenceswatcher.cpp  preferenceswatcher.h  qmlpreferences.cpp  qmlpreferences.h  tracking.cpp  tracking.h  wasm_resource_files.qrc  watchdog.cpp  watchdog.h
source/app/QTBUG-60671-hack/: qtwebengine.qml
source/app/attributes/: attribute.cpp  attribute.h  attributeedits.h  availableattributesmodel.cpp  availableattributesmodel.h  conditionfncreator.cpp  conditionfncreator.h  condtionfnops.h  datafield.cpp  datafield.h  editattributetablemodel.cpp  editattributetablemodel.h  enrichmentcalculator.cpp  enrichmentcalculator.h  enrichmenttablemodel.cpp  enrichmenttablemodel.h  fieldtype.h  valuetype.h
source/app/auth/: auth.cpp  auth.h  genkeys.sh  keys.qrc  public_auth_key.der
source/app/commands/: applytransformationscommand.cpp  applytransformationscommand.h  applytransformscommand.cpp  applytransformscommand.h  applyvisualisationscommand.cpp  applyvisualisationscommand.h  cloneattributecommand.cpp  cloneattributecommand.h  command.cpp  command.h  commandmanager.cpp  commandmanager.h  deletenodescommand.cpp  deletenodescommand.h  deleteselectednodescommand.cpp  deleteselectednodescommand.h  editattributecommand.cpp  editattributecommand.h  importattributescommand.cpp  importattributescommand.h  removeattributescommand.cpp  removeattributescommand.h  selectnodescommand.h
source/app/debug/: infiniteParse.graphia
source/app/examples/: London_Tube_River_Bus.graphia  Simple_pairwise-London_tube_map.txt  Tutorial.graphia  Tutorial.txt
source/app/graph/: componentmanager.cpp  componentmanager.h  elementid.h  elementiddistinctsetcollection.h  elementiddistinctsetcollection_debug.h  elementtype.h  filter.h  graph.cpp  graph.h  grapharray.h  graphcomponent.h  graphconsistencychecker.cpp  graphconsistencychecker.h  graphfilter.h  graphmodel.cpp  graphmodel.h  igraph.h  igrapharray.h  imutablegraph.h  mutablegraph.cpp  mutablegraph.h  qmlelementid.h  weightededgegraphmodel.cpp  weightededgegraphmodel.h
source/app/icon/: Icon.icns  Icon.rc  Installer.icns  generate.sh  mainicon.qrc
source/app/icon-themes/: generate-icons-qrc.sh  icons.qrc
source/app/layout/: barneshuttree.cpp  barneshuttree.h  centreinglayout.cpp  centreinglayout.h  circlepackcomponentlayout.cpp  circlepackcomponentlayout.h  collision.cpp  collision.h  componentlayout.cpp  componentlayout.h  fastinitiallayout.cpp  fastinitiallayout.h  forcedirectedlayout.cpp  forcedirectedlayout.h  layout.cpp  layout.h  layoutsettings.cpp  layoutsettings.h  nodepositions.cpp  nodepositions.h  octree.h  powerof2gridcomponentlayout.cpp  powerof2gridcomponentlayout.h  randomlayout.cpp  randomlayout.h  scalinglayout.cpp  scalinglayout.h  sequencelayout.h  spatialtree.h
source/app/loading/: fileidentifier.cpp  fileidentifier.h  gmlexporter.cpp  gmlexporter.h  gmlfiletype.cpp  gmlsaver.cpp  gmlsaver.h  graphmlexporter.cpp  graphmlexporter.h  graphmlsaver.cpp  graphmlsaver.h  iexporter.h  importattributeskeydetection.cpp  importattributeskeydetection.h  isaver.h  jsongraphexporter.cpp  jsongraphexporter.h  jsongraphsaver.cpp  jsongraphsaver.h  loader.cpp  loader.h  nativeloader.cpp  nativeloader.h  nativesaver.cpp  nativesaver.h  pairwiseexporter.cpp  pairwiseexporter.h  pairwisesaver.cpp  pairwisesaver.h  pairwisetxtfileparser.cpp  pairwisetxtfiletype.cpp  pairwisetxtfiletype.h  parserthread.cpp  parserthread.h  qmltabulardataparser.cpp  qmltabulardataparser.h  saver.cpp  saver.h  saverfactory.cpp  saverfactory.h
source/app/maths/: boundingbox.cpp  boundingbox.h  boundingsphere.cpp  boundingsphere.h  circle.h  conicalfrustum.cpp  conicalfrustum.h  constants.h  frustum.cpp  frustum.h  interpolation.h  line.h  plane.cpp  plane.h  ray.cpp  ray.h
source/app/rendering/: camera.cpp  camera.h  doublebufferedtexture.cpp  doublebufferedtexture.h  glyphmap.cpp  glyphmap.h  graphcomponentrenderer.cpp  graphcomponentrenderer.h  graphcomponentscene.cpp  graphcomponentscene.h  graphoverviewscene.cpp  graphoverviewscene.h  graphrenderer.cpp  graphrenderer.h  graphrenderercore.cpp  graphrenderercore.h  graphrenderertypes.h  opengldebuglogger.cpp  opengldebuglogger.h  openglfunctions.cpp  openglfunctions.h  projection.h  scene.h  screenshotrenderer.cpp  screenshotrenderer.h  shaders.qrc  shadertools.cpp  shadertools.h  shading.h  transition.cpp  transition.h
source/app/transform/: availabletransformsmodel.cpp  availabletransformsmodel.h  compoundtransform.cpp  compoundtransform.h  conditionfncreator.h  datafield.cpp  datafield.h  eccentricitytransform.cpp  eccentricitytransform.h  edgecontractiontransform.cpp  edgecontractiontransform.h  fieldtype.h  filtertransform.cpp  filtertransform.h  graphtransform.cpp  graphtransform.h  graphtransformattributeparameter.h  graphtransformconfig.cpp  graphtransformconfig.h  graphtransformconfigparser.cpp  graphtransformconfigparser.h  graphtransformparameter.h  mcltransform.cpp  mcltransform.h  pageranktransform.cpp  pageranktransform.h  transformattribute.h  transformcache.cpp  transformcache.h  transformedgraph.cpp  transformedgraph.h  transforminfo.h
source/app/ui/: alert.h  app_qml.qrc  document.cpp  (+26 more)
source/crashreporter/: CMakeLists.txt  Main.qml  PlaceholderTextArea.qml  crashreporter.pro  main.cpp  main.qml  report.h  resources.qrc
source/messagebox/: CMakeLists.txt  main.cpp  resources.qrc
source/shared/: CMakeLists.txt  iapplication.h  shared.cmake  shared.pri
source/updater/: CMakeLists.txt  Main.qml  installer.cpp  installer.h  main.cpp  main.qml  resources.qrc  updater.qml
(+1420 files in other folders)
